fix slight problem in operatormenu